# x_bot

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  env_example  pyproject.toml  twitter_session_state.json
alembic/: env.py
alembic/versions/: 3caa6e451516_initial.py
src/: run_bot.py  settings.py
src/ai_services/: ai_generate_reply.py
src/bots/: bots_crud.py  create_bot.py
src/database/: db.py  models.py
src/twitter/: tweets.py  tweets_crud.py  twitter_portal.py
src/utils/: portal_utils.py
