[project]
name = "x-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "gologin>=2025.7.5",
    "langchain-openai>=0.3.28",
    "playwright>=1.53.0",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
    "asyncpg>=0.30.0",
    "cryptography>=45.0.5",
]
